fix: logout icon more visible on desktop

--- a/css/styles.css
+++ b/css/styles.css
@@ -1916,8 +1916,7 @@ select.input {
 }
 
 .logout-header-btn {
-  opacity: 0.4;
-  order: -1;
+  opacity: 0.7;
 }
 .logout-header-btn:hover {
   opacity: 1;
